2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/printk.c, score/src/objectget.c: Fix spacing.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/malloc.c: Do not assert on free of bad pointer.

2007-11-26	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/include/rtems/score/thread.h: Fix spelling error.

2007-11-17	Till Straumann <strauman@slac.stanford.edu>

	* libi2c/libi2c.c, libi2c/libi2c.h, libi2c/README_libi2c:
	Added checks so that use of 'stdio' is avoided (falling
	back to 'printk') before the system is up.
	Publish driver entry points so that the libi2c driver could
	be added to the applications 'device driver table'.
	This is not fully implemented yet, though, since in addition to
	initializing libi2c the low-level i2c bus drivers as well
	as high-level i2c device drivers need to be registered
	with the library.
	Updated README_libi2c accordingly.

2007-11-17	Till Straumann <strauman@slac.stanford.edu>

	* libnetworking/rtems/rtems_glue.c: let rtems_bsdnet_ifconfig
	(SIOCGIFMEDIA) pass the user parameter down to the ioctl 
	so that it knows what PHY they want to look at.

2007-11-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/src/apimutexlock.c, score/src/apimutexunlock.c: Functions were
	in opposite files. Whoops!

2007-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/shell.c, libmisc/shell/shell.h: Much cleanup but much
	of the focus was on the beginning stages of making the login checker
	pluggable just like the shell.

2007-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/src/mprotect.c: Update comments.

2007-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix/Makefile.am: Add support for Ada95 interrupt tasks.  This
	will require gcc 4.3 or newer.
	* posix/src/ada_intrsupp.c: New file.

2007-11-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sapi/src/exinit.c, score/Makefile.am,
	score/include/rtems/score/apimutex.h: API Mutex calls should never